[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/sfx/fireball.wav" type="AudioStream" id=1]
[ext_resource path="res://attacks/weapon_scripts/BlackHole.gd" type="Script" id=2]

[node name="BlackHole" type="Node2D"]
script = ExtResource( 2 )

[node name="OriginPoint" type="Position2D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="CooldownTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
